fix: remove gap in sections

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@ main {
   justify-content: center;
   align-items: center;
   padding: 0 2rem;
-  gap: 200px;
+  gap: 25px;
 
   @media screen and (max-width: 750px) {
     padding: 0 2rem;
